# actix-web-sea-orm-crud-api

./: .env.example  .gitignore  Cargo.toml  README.md
src/: main.rs
src/handlers/: contact_handler.rs  default_handler.rs  mod.rs  upload_handler.rs
src/models/: contact_model.rs  mod.rs
