[package]
name = "actix_seaorm_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-rt = "2"
sea-orm = { version = "0.2", features = ["sqlx-mysql", "runtime-actix-native-tls"] }
dotenv = "0.15"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.114"
actix-multipart = "0.6.1"
futures = "0.3.30"
sanitize-filename = "0.5.0"
uuid = "1.7.0"

